# phasta-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: amr_implementation.md  compressible_solver_developer_guide.md  compressible_solver_guide.md  compressible_solver_tutorial.md  conf.py  development.md  enhancement_plan.md  feature_parity.md  feature_parity_tracking.md  feature_tracking.md  gpu_architecture.md  integration_tests.md  numerical_methods.md  project_structure.md  turbulence_models.md  validation_cases.md  wall_functions.md
docs/_static/: custom.css  custom.js
docs/physics/: turbulence_models.md  wall_functions.md
examples/: README.md  mesh_visualization.py  parallel_heat_equation.py  parallel_navier_stokes.py  parallel_poisson.py
examples/acceleration/: gpu_example.py
examples/mesh_generation/: basic_meshes.py
examples/notebooks/: 00_basic_meshes.ipynb  01_basic_flow_solver.ipynb  02_turbulence_modeling.ipynb  03_heat_transfer.ipynb  04_multiphase_flow.ipynb  05_chemical_reactions.ipynb  06_particle_laden_flow.ipynb  07_phase_change.ipynb  08_turbulent_flow.ipynb  09_conjugate_heat_transfer.ipynb  10_advanced_visualization.ipynb  11_gpu_acceleration.ipynb  12_lid_driven_cavity.ipynb  13_parallel_computing.ipynb
examples/parallel/: parallel_mesh.py
examples/simulations/: lid_driven_cavity.py
examples/visualization/: plot_results.py
phasta/: __init__.py  cli.py  config.py
phasta/acceleration/: __init__.py  base.py  cpu.py  cuda.py  metal.py
phasta/amr/: error_estimation.py  mesh_operations.py
phasta/core/: __init__.py  field.py  io.py  mesh.py  parallel.py
phasta/fem/: __init__.py  assembly.py  basis.py  global_assembly.py  integration.py  io.py  metrics.py  parallel.py  parallel_io.py  parallel_solvers.py  partitioning.py  preconditioners.py  solver.py  solvers.py  time.py
phasta/gpu/: cuda.py  device.py  metal.py  opencl.py
phasta/gpu/tests/: test_gpu.py
phasta/mesh/: adaptation.py  adaptive.py  boundary_layer.py  cad.py  generator.py  gpu.py  iges.py  parallel.py  parallel_gpu.py  quality.py
phasta/parallel/: domain_decomposition.py  load_balancer.py  mpi_wrapper.py  parallel_io.py  performance.py
phasta/parallel/tests/: test_parallel.py
phasta/solver/: adaptive_time.py  advanced.py  base.py  chemical.py  chemistry.py  combustion.py  heat_transfer.py  linear.py  mesh.py  mesh_optimization.py  multiphase.py  nonlinear.py  parallel.py  preconditioners.py  radiation.py  time_integration.py  turbulence.py
phasta/solver/compressible/: __init__.py  amg_solver.py  boundary_conditions.py  element_calculations.py  flux_assembly.py  io.py  (+12 more)
phasta/solvers/: direct.py  gpu.py  multigrid.py
phasta/visualization/: README.md  plotter.py
scripts/: run_validation.py
tests/: test_adaptive.py  test_adaptive_time.py  test_advanced_chemistry.py  test_advanced_heat_transfer.py  test_advanced_multiphase.py  test_advanced_solver.py  test_advanced_turbulence.py  test_assembly.py  test_basis.py  test_boundary_layer.py  test_cad.py  test_chemical.py  test_chemistry.py  test_combustion.py  test_compressible_solver.py  test_field.py  test_global_assembly.py  test_gpu.py  test_gpu_solvers.py  test_heat_transfer.py  test_iges.py  test_integration.py  test_io.py  test_linear.py  test_mesh.py  test_mesh_adaptation.py  test_mesh_generator.py  test_mesh_optimization.py  test_mesh_quality.py  test_metrics.py  test_nonlinear.py  test_parallel.py  test_parallel_gpu.py  test_parallel_io.py  test_parallel_solvers.py  test_partitioning.py  test_preconditioners.py  test_quality.py  test_radiation.py  test_solver.py  (+4 more)
visualization/: plotting.py
(+17 files in other folders)
